<resources>
    <string name="app_name" translatable="false">EEPA</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="search_hint">What do you want to learn today?</string>
    <string name="select_news">Select News Source</string>
    <string name="Theory">Theory</string>
    <string name="appearance">Appearance</string>
    <string name="ChangeLang">Change Language</string>
    <string name="about">About</string>
    <string name="edit">Edit Profile</string>
    <string name="see_all">See All</string>
    <string name="more">More</string>
    <string name="memory">Sharpen Understanding</string>
    <string name="example">Sample</string>
    <string name="other_features">Other Features</string>
    <string name="exercise">Exercise</string>
    <string name="flashcard" translatable="false">Flashcard</string>
    <string name="calc">Calculator</string>
    <string name="attachment">Attachment</string>
    <string name="Intro">Intro</string>
    <string name="standard_model">The Standard Model</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="login_greetings">Before starting to learn, let\'s introduce yourself first.</string>
    <string name="name">Your name</string>
    <string name="login">Login</string>
    <string name="log_out">Logout</string>
</resources>