<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biru_seken"
    tools:showIn="@layout/activity_on_boarding">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="120dp"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/rounded_corner_kirirata"
        android:text="@string/btn_back"
        android:fontFamily="@font/nunito_black"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="120dp"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_next"
        android:fontFamily="@font/nunito_black"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@drawable/rounded_corner_kananrata"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="120dp"
        android:layout_height="57dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:text="@string/login"
        android:fontFamily="@font/nunito_black"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@drawable/rounded_corner_kananrata"
        android:textColor="@android:color/white" />

</RelativeLayout>