<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/main_bg"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/nunito_black"
            android:text="Muhammad Ramdhan"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/avatar"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.533" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/nunito_bold"
            android:hint="@string/search_hint"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.826" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/uil_search"
            app:layout_constraintBottom_toBottomOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="@+id/editText"
            app:layout_constraintHorizontal_bias="0.948"
            app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintTop_toTopOf="@+id/editText"
            app:tint="@color/abu" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                android:id="@+id/carousel"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_margin="20dp"
                app:autoPlay="true"
                app:autoPlayDelay="5000"
                app:carouselBackground="@drawable/rounded_corner"
                app:carouselType="BLOCK"
                app:imageScaleType="fitXY"
                app:scaleOnScroll="false"
                app:scalingFactor="0.35"
                app:showBottomShadow="false"
                app:showIndicator="true"
                app:showNavigationButtons="false"
                app:showTopShadow="false">

            </org.imaginativeworld.whynotimagecarousel.ImageCarousel>
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/nunito_black"
            android:text="@string/Theory"
            android:textColor="@color/abu"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/see_all"
            android:textColor="@color/abu"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginVertical="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/pengantar"
                    android:layout_width="166dp"
                    android:layout_height="166dp"
                    android:layout_marginHorizontal="15dp"
                    android:src="@drawable/pengantar" />

                <ImageView
                    android:id="@+id/modelstandar"
                    android:layout_width="166dp"
                    android:layout_height="166dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/model_standar" />

                <ImageView
                    android:id="@+id/fermion"
                    android:layout_width="166dp"
                    android:layout_height="166dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/fermion" />

                <ImageView
                    android:id="@+id/boson"
                    android:layout_width="166dp"
                    android:layout_height="166dp"
                    android:src="@drawable/boson" />

                <TextView
                    android:id="@+id/more"
                    android:layout_width="166dp"
                    android:layout_height="166dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@drawable/rounded_corner_smaller"
                    android:backgroundTint="@color/biru"
                    android:fontFamily="@font/nunito_black"
                    android:gravity="center"
                    android:paddingRight="20dp"
                    android:text="@string/more"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/nunito_black"
            android:text="@string/memory"
            android:textColor="@color/abu"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/contohsoal"
                android:text="@string/example"
                android:gravity="start|bottom"
                android:layout_weight="3"
                android:padding="15dp"
                android:fontFamily="@font/nunito_black"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/latihan"
                android:text="@string/example"
                android:gravity="start|bottom"
                android:layout_weight="3"
                android:padding="15dp"
                android:fontFamily="@font/nunito_black"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/flashcard"
                android:text="@string/example"
                android:gravity="start|bottom"
                android:layout_weight="3"
                android:padding="15dp"
                android:fontFamily="@font/nunito_black"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>