<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Materi">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/news_bg"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/arrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_black"
        android:text="@string/Theory"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/arrowBack"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner_smaller"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/Intro"
        android:textAlignment="viewStart"
        android:letterSpacing="0"
        android:textAllCaps="false"
        android:textColor="@color/abu"
        android:textSize="24sp"
        app:backgroundTint="@color/biru_seken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/boson"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_smaller"
        android:fontFamily="@font/nunito_bold"
        android:text="Boson"
        android:textAlignment="viewStart"
        android:letterSpacing="0"
        android:textAllCaps="false"
        android:textColor="@color/abu"
        android:textSize="24sp"
        app:backgroundTint="@color/biru_seken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro" />

    <Button
        android:id="@+id/fermion"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_smaller"
        android:fontFamily="@font/nunito_bold"
        android:text="Fermion"
        android:textAlignment="viewStart"
        android:letterSpacing="0"
        android:textAllCaps="false"
        android:textColor="@color/abu"
        android:textSize="24sp"
        app:backgroundTint="@color/biru_seken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boson" />

    <Button
        android:id="@+id/standarModel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_smaller"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/standard_model"
        android:textAlignment="viewStart"
        android:letterSpacing="0"
        android:textAllCaps="false"
        android:textColor="@color/abu"
        android:textSize="24sp"
        app:backgroundTint="@color/biru_seken"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fermion" />

</androidx.constraintlayout.widget.ConstraintLayout>